# aoabv

./: .editorconfig  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md
crates/sim_core/: Cargo.toml
crates/sim_core/src/: cause.rs  diff.rs  fixed.rs  lib.rs  reduce.rs  rng.rs  schedule.rs  world.rs
crates/sim_core/src/io/: frame.rs  mod.rs  seed.rs
crates/sim_core/src/kernels/: astronomy.rs  atmosphere.rs  climate.rs  climate_diag.rs  coupler.rs  cryosphere.rs  ecology.rs  geodynamics.rs  mod.rs
crates/sim_core/src/kernels/atmosphere/: humidity.rs  mod.rs  orography.rs  precipitation.rs  seasonality.rs
crates/sim_core/src/kernels/climate/: albedo.rs  classification.rs  diagnostics.rs  mod.rs
crates/sim_core/tests/: astronomy_test.rs  geodynamics_test.rs
crates/simd/: Cargo.toml
crates/simd/src/: main.rs
crates/simstep/: Cargo.toml
crates/simstep/src/: main.rs
crates/tracing/: Cargo.toml
crates/tracing/src/: lib.rs
data/reference/: targets_v0_2.csv
docs/: agents.md  cause_codes.md  data_catalog.md  plan.md  roadmap.md  systems_contract.md  v0.0_verification.md  validation_v0_2.md
scripts/: test_data_catalog.sh  validate_v0_2.sh
testdata/golden/: run_seed_wet_equator.ndjson  seed_wet_equator.ndjson  wet_equator_8ticks.ndjson
testdata/seeds/: run_seed_wet_equator.json  seed_shard_continents.json  seed_wet_equator.json
tools/datafetch/: datafetch.py
tools/validate/: validate_v0_2.py
viewer_godot/: project.godot  viewer_godot.csproj
viewer_godot/Scenes/: Main.tscn
viewer_godot/Scripts/: MapRenderer.cs  TimelineHud.cs  WebSocketClient.cs
