[workspace]
members = [
    "crates/sim_core",
    "crates/simd",
    "crates/simstep",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"

[workspace.dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["ws"] }
futures = "0.3"
proptest = "1.4"
rand = "0.8"
rand_chacha = "0.3"
rand_seeder = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.6"
thiserror = "1.0"
tokio = { version = "1.37", features = ["rt-multi-thread", "macros", "sync", "time", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
clap = { version = "4.5", features = ["derive"] }
