[package]
name = "simd"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
futures = { workspace = true }
serde_json = { workspace = true }
sim_core = { path = "../sim_core" }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
